log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 04:26:30 PM UTC: 
 tests:  0|6
total_score: 0/70
e4aad24
Fri 31 Mar 2023 11:25:16 AM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ce206d2
Fri 31 Mar 2023 11:26:50 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0027e7a
Fri 31 Mar 2023 11:27:13 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e608bcb
Fri 31 Mar 2023 11:28:12 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9e1219f
Fri 31 Mar 2023 11:29:02 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
730a72d
Fri 31 Mar 2023 11:32:16 AM UTC: 
 arraylist.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:17: error: assignment to ‘void **’ from incompatible pointer type ‘int **’ [-Werror=incompatible-pointer-types]
   17 |   lista -> data = (int**)malloc(sizeof(int*)*(lista -> size));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
56278e6
Fri 31 Mar 2023 11:32:33 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0b195b9
Fri 31 Mar 2023 11:32:54 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d6c3358
Fri 31 Mar 2023 11:33:19 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
51a17f9
Fri 31 Mar 2023 11:33:28 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c57fb33
Fri 31 Mar 2023 11:43:35 AM UTC: 
 arraylist.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a76a497
Fri 31 Mar 2023 11:45:45 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
5cb66ed
Fri 31 Mar 2023 11:46:32 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d742059
Fri 31 Mar 2023 11:48:38 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
132dc6c
Fri 31 Mar 2023 11:49:07 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f63f430
Fri 31 Mar 2023 11:49:57 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f533054
Fri 31 Mar 2023 11:50:34 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
fd022c1
Fri 31 Mar 2023 11:51:56 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
7b2b468
Fri 31 Mar 2023 11:52:10 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1851379
Fri 31 Mar 2023 11:52:26 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
6cf904d
Fri 31 Mar 2023 11:53:09 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7f33997
Fri 31 Mar 2023 11:54:53 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bffcab7
Fri 31 Mar 2023 11:55:28 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
0238d13
Fri 31 Mar 2023 11:57:34 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
f2052e7
Fri 31 Mar 2023 11:59:40 AM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|4
total_score: 20/70
8ce6b75
Fri 31 Mar 2023 12:05:13 PM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 20/70
d1c44d2
Fri 31 Mar 2023 12:05:39 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b1e0a99
Fri 31 Mar 2023 12:07:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f2d513
Fri 31 Mar 2023 12:07:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c02845e
Fri 31 Mar 2023 12:08:14 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
2723dfe
Fri 31 Mar 2023 12:09:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d02efaf
Fri 31 Mar 2023 12:09:54 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
16c6af9
Fri 31 Mar 2023 12:12:53 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
7785bda
Fri 31 Mar 2023 12:13:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
1e7af46
Fri 31 Mar 2023 12:13:30 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d59557f
Fri 31 Mar 2023 12:15:04 PM UTC: 
 arraylist.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|0
02e313e
Fri 31 Mar 2023 12:17:20 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a77df89
Fri 31 Mar 2023 12:20:19 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:17:33: error: ‘*lista.data’ is used uninitialized [-Werror=uninitialized]
   17 |   lista -> data = realloc(lista -> data,sizeof(ArrayList));
      |                           ~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0758c8b
Fri 31 Mar 2023 12:20:57 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
008e2be
Fri 31 Mar 2023 12:23:09 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
f26ffe2
Fri 31 Mar 2023 12:23:51 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
66252ed
Fri 31 Mar 2023 12:24:47 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5cda5cc
Fri 31 Mar 2023 12:25:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
caa3e9f
Fri 31 Mar 2023 12:26:08 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
2de4a66
Fri 31 Mar 2023 12:26:35 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ecd6ae5
Fri 31 Mar 2023 12:26:48 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
34a32ba
Fri 31 Mar 2023 12:27:40 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
3346a62
Fri 31 Mar 2023 12:28:06 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
cad2176
Fri 31 Mar 2023 12:29:37 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
ab99c95
Fri 31 Mar 2023 12:29:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
029fee2
Fri 31 Mar 2023 12:33:26 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
8eedd46
Fri 31 Mar 2023 02:33:16 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|3
total_score: 30/70
3891083
Fri 31 Mar 2023 02:36:59 PM UTC: 
 arraylist.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  6|3
total_score: 30/70
969c688
Fri 31 Mar 2023 02:47:07 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 30/70
b21a498
Fri 31 Mar 2023 02:54:58 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9620fad
Fri 31 Mar 2023 02:55:49 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
c1f6120
Fri 31 Mar 2023 02:56:11 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b7e4008
Fri 31 Mar 2023 02:56:52 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
dc12f88
Fri 31 Mar 2023 02:57:16 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3b1d531
Fri 31 Mar 2023 02:57:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
add0e7f
Fri 31 Mar 2023 02:57:52 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
abe6c89
Fri 31 Mar 2023 02:58:52 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
a61d836
